# Decanter

./: Decanter.cabal  Main.hs  Readme.md  flake.nix  haskell-bottles.cabal
.github/workflows/: haskell.yml  nix.yml
Bottle/: Logic.hs  Types.hs
Data/: Vdf.hs
Gui/: BottleSnapshotsView.hs  BottleView.hs  NewBottleDialog.hs  OverviewView.hs
Logic/: Translation.hs
data/: com.github.borgvall.decanter.desktop
packaging/: decanter.spec
test/Bottle/: LogicSpec.hs
test/Data/: VdfSpec.hs
