cabal-version:      3.0
name:               decanter
version:            0.1.0.0
synopsis:           A Wine prefix manager written in Haskell
license:            GPL-3.0-only
author:             Johannes Röhl
maintainer:         joroehl@gmx.de
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall -threaded -rtsopts -O2

executable decanter
    import:           warnings
    main-is:          Main.hs
    
    -- Die anderen Module müssen im selben Verzeichnis liegen
    other-modules:    Bottle.Types
                    , Bottle.Logic
                    , Logic.Translation
                    , Gui.BottleView
                    , Gui.BottleSnapshotsView
                    , Gui.NewBottleDialog
                    , Gui.OverviewView
                    , Data.Vdf
    
    -- Dependencies
    build-depends:    base >= 4.16 && < 5
                    , text
                    , bytestring >= 0.11
                    , directory
                    , filepath
                    , typed-process
                    , async
                    
                    -- BTRFS Support
                    , btrfs >= 0.2
                    
                    -- GUI (GTK4 + Adwaita)
                    , gi-gtk4 == 4.*
                    , gi-gdk4 == 4.*
                    , gi-adwaita == 1.*
                    , gi-gio
                    , gi-glib
                    , haskell-gi-base

    default-language: Haskell2010

test-suite decanter-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test, .
    main-is:          Spec.hs
    
    -- Module, die getestet werden sollen (aus dem Hauptprogramm)
    other-modules:    Bottle.Logic
                    , Bottle.Types
                    , Logic.Translation
                    , Bottle.LogicSpec
                    , Data.Vdf
    
    build-depends:    base >= 4.16 && < 5
                    , hspec
                    , hspec-discover
                    , text
                    , bytestring >= 0.11
                    , directory
                    , filepath
                    , typed-process
                    , btrfs

    -- Automatisches Finden von Spec-Dateien
    build-tool-depends: hspec-discover:hspec-discover
